@@ -1,2 +1,2 @@
-// 1.20.4	2024-03-15T21:04:29.0393465	Languages: en_us for mod: chilibulletweapons
-98f99d7c4e61a9fc6e83d84d428bc365f6f33666 assets/chilibulletweapons/lang/en_us.json
+// 1.20.4	2024-03-15T21:20:25.1885571	Languages: en_us for mod: chilibulletweapons
+f2c2577ce9ec2e482de1edd997ca4429a95e8e55 assets/chilibulletweapons/lang/en_us.json
